# dnd-battle-sim

./: .gitignore
backend/: .env  pyproject.toml
backend/src/dndsim/api/: deps.py  main.py  mappers.py  schemas.py
backend/src/dndsim/api/routers/: creatures.py  encounter_runtime.py  encounter_saves.py  encounters.py
backend/src/dndsim/db/: deps.py  init_db.py  models.py  session.py
backend/tests/: conftest.py  test_advantage_disadvantage.py  test_api_creatures.py  test_api_encounters_and_saves.py  test_attack_flow.py  test_bless_middleware.py  test_bonus_action_attack.py  test_cast_spell_slots_and_concentration.py  test_castspell_targeting_range.py  test_castspell_validator.py  test_concentration_breaks_on_high_dc.py  test_concentration_maintained.py  test_conditions_movement.py  test_core_spells_library.py  test_creatures_crud.py  test_damage_immunity.py  test_damage_resistance.py  test_damage_vulnerability.py  test_death_save_nat20_revive.py  test_encounter_saves.py  test_encounters_crud.py  test_extra_attack.py  test_factions_no_oa_from_allies.py  test_factions_oa_only_enemies.py  test_heal_revives.py  test_hold_person_effects.py  test_initiative_finalize.py  test_initiative_roll.py  test_mapper_combatant_from_creature.py  test_multiattack.py  test_opportunity_attack_flow.py  test_prone_advantage.py  test_save_fail_full.py  test_save_half.py  test_save_negates.py  test_spellcasting_stats_required.py  test_stabilize_action.py  test_surprise_blocks_reaction.py  test_validation.py
backend/tests/fixtures/lss/: Жестянка — Long Story Short.json
(+16 files in other folders)
