[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["serega <aazolg@mail.ru>"]
readme = "README.md"
packages = [{ include = "dndsim", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.127.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
psycopg = {extras = ["binary"], version = "^3.3.2"}
orjson = "^3.11.5"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
hypothesis = "^6.148.8"
ruff = "^0.14.10"
mypy = "^1.19.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
